--- a/src/components/view-attractions/view-attractions.template.html
+++ b/src/components/view-attractions/view-attractions.template.html
@@ -1,1 +1,7 @@
-<p> Hessan </p>
+<md-list>
+
+    <md-list-item aria-label="Attraction" class="noright" ng-repeat="attraction in $ctrl.attractions">
+        <p> {{attraction.title}} {{attraction.city}} </p>
+    <md-divider></md-divider>
+
+</md-list>
