--- a/src/components/app-header/app-header.template.html
+++ b/src/components/app-header/app-header.template.html
@@ -2,7 +2,7 @@
     <div class="md-toolbar-tools">
 
         <a layout="row">
-            <h1 class="header">Plan Your Holiday</h1>
+            <h1>Plan Your Holiday</h1>
         </a>
 
         <span flex></span>
