--- a/src/components/app-header/app-header.style.css
+++ b/src/components/app-header/app-header.style.css
@@ -11,12 +11,16 @@ md-nav-bar.md-default-theme .md-button._md-nav-button.md-unselected, md-nav-bar 
     font-weight: bold;
 }
 
-app-header > md-toolbar, app-header > md-toolbar > .md-toolbar-tools{
+app-header > md-toolbar, app-header > md-toolbar {
     min-height: 200px;
     height: 200px;
-    font-size: 200%;
     background: url("https://static.pexels.com/photos/2324/skyline-buildings-new-york-skyscrapers.jpg");
 
+}
+app-header > md-toolbar, app-header > md-toolbar > .md-toolbar-tools {
+  position: absolute;
+  font-size: 200%;
+  bottom: 0;
 }
 
 md-nav-bar.md-default-theme md-nav-ink-bar, md-nav-bar md-nav-ink-bar {
