add bootstrap and use in components

--- a/src/components/app-content/app-content.template.html
+++ b/src/components/app-content/app-content.template.html
@@ -1,11 +1,12 @@
 <div layout="row" layout-fill ng-cloak>
     <div layout="column" flex>
         <app-header></app-header>
-        <md-content flex layout-gt-sm="row">
+        <ng-content flex layout-gt-sm="row">
             <span flex="20"></span>
             <ui-view flex></ui-view>
             <span flex="20"></span>
-        </md-content>
+        </ng-content>
         <app-footer></app-footer>
     </div>
 </div>
+''
