Created front page
Designed landing page of the application displaying an head-banner and four information-boxes

--- a/src/components/app-header/app-header.template.html
+++ b/src/components/app-header/app-header.template.html
@@ -1,3 +1,86 @@
-<div class="jumbotron text-center">
-  <h1>Plan your holiday</h1>
+
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+   <ul class="nav navbar-nav navbar-right">
+      <li><a href="#">Partners <span class="bar">|</span></a></li>
+      <li><a href="#">About <span class="bar">|</span></a></li>
+      <li><a href="#">Login<span class="bar"></span></a></li>
+    </ul>
+ </div>
+</nav>
+<header class="jumbotron">
+   <div class="inner cover">
+      <h1 class="cover-heading">Plan Your Holiday</h1>
+
+        <p class="lead">Plan Your Holiday is the best Single-Page Web Application in the World.
+
+        <!-- <small>    <br> <a href="http://bootsnipp.com/iframe/g6GWQ" target=
+              "_blank">Best viewed on full screen</a></small> */
+
+        </p> -->
+
+        <p class="lead"><a class="btn btn-lg btn-info" href="#">Get Started</a></p>
+      </div>
+ </header>
+
+<div class="container">
+ <div class="container">
+    <div class="row">
+        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+            <div class="box">
+                <div class="box-icon">
+                    <span class="fa fa-4x fa-html5"></span>
+                </div>
+                <div class="info">
+                    <h4 class="text-center">Individual Experiences</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti atque, tenetur quam aspernatur corporis at explicabo nulla dolore necessitatibus doloremque exercitationem sequi dolorem architecto perferendis quas aperiam debitis dolor soluta!</p>
+                    <!-- <a href="" class="btn">Link</a> -->
+                </div>
+            </div>
+        </div>
+
+        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+            <div class="box">
+                <div class="box-icon">
+                    <span class="fa fa-4x fa-css3"></span>
+                </div>
+                <div class="info">
+                    <h4 class="text-center">Efficient Scheduling</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti atque, tenetur quam aspernatur corporis at explicabo nulla dolore necessitatibus doloremque exercitationem sequi dolorem architecto perferendis quas aperiam debitis dolor soluta!</p>
+                    <!-- <a href="" class="btn">Link</a> -->
+                </div>
+            </div>
+        </div>
+	</div>
+</div>
+
+<div class="container">
+   <div class="row">
+       <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+           <div class="box">
+               <div class="box-icon">
+                   <span class="fa fa-4x fa-html5"></span>
+               </div>
+               <div class="info">
+                   <h4 class="text-center">Individual Experiences</h4>
+                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti atque, tenetur quam aspernatur corporis at explicabo nulla dolore necessitatibus doloremque exercitationem sequi dolorem architecto perferendis quas aperiam debitis dolor soluta!</p>
+                   <!-- <a href="" class="btn">Link</a> -->
+               </div>
+           </div>
+       </div>
+
+       <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+           <div class="box">
+               <div class="box-icon">
+                   <span class="fa fa-4x fa-css3"></span>
+               </div>
+               <div class="info">
+                   <h4 class="text-center">Efficient Scheduling</h4>
+                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti atque, tenetur quam aspernatur corporis at explicabo nulla dolore necessitatibus doloremque exercitationem sequi dolorem architecto perferendis quas aperiam debitis dolor soluta!</p>
+                   <!-- <a href="" class="btn">Link</a> -->
+               </div>
+           </div>
+       </div>
+ </div>
+</div>
 </div>
