--- a/src/components/app-header/app-header.template.html
+++ b/src/components/app-header/app-header.template.html
@@ -29,11 +29,11 @@
         <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
             <div class="box">
                 <div class="box-icon">
-                    <span class="fa fa-4x fa-html5"></span>
+                    <span class="fa fa-5x fa-heart"></span>
                 </div>
                 <div class="info">
                     <h4 class="text-center">Individual Experiences</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti atque, tenetur quam aspernatur corporis at explicabo nulla dolore necessitatibus doloremque exercitationem sequi dolorem architecto perferendis quas aperiam debitis dolor soluta!</p>
+                    <p> Plan your holiday adjust Your holiday to Your individual preferences and expectations</p>
                     <!-- <a href="" class="btn">Link</a> -->
                 </div>
             </div>
@@ -42,7 +42,7 @@
         <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
             <div class="box">
                 <div class="box-icon">
-                    <span class="fa fa-4x fa-css3"></span>
+                    <span class="fa fa-5x fa-calendar" aria-hidden="true" ></span>
                 </div>
                 <div class="info">
                     <h4 class="text-center">Efficient Scheduling</h4>
@@ -59,10 +59,10 @@
        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
            <div class="box">
                <div class="box-icon">
-                   <span class="fa fa-4x fa-html5"></span>
+                   <span class=" fa fa-5x fa-star" ></span>
                </div>
                <div class="info">
-                   <h4 class="text-center">Individual Experiences</h4>
+                   <h4 class="text-center">Feedback</h4>
                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti atque, tenetur quam aspernatur corporis at explicabo nulla dolore necessitatibus doloremque exercitationem sequi dolorem architecto perferendis quas aperiam debitis dolor soluta!</p>
                    <!-- <a href="" class="btn">Link</a> -->
                </div>
@@ -72,10 +72,10 @@
        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
            <div class="box">
                <div class="box-icon">
-                   <span class="fa fa-4x fa-css3"></span>
+                   <span class="fa fa-5x fa-gift" ></span>
                </div>
                <div class="info">
-                   <h4 class="text-center">Efficient Scheduling</h4>
+                   <h4 class="text-center">Advantages</h4>
                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti atque, tenetur quam aspernatur corporis at explicabo nulla dolore necessitatibus doloremque exercitationem sequi dolorem architecto perferendis quas aperiam debitis dolor soluta!</p>
                    <!-- <a href="" class="btn">Link</a> -->
                </div>
