Added "Get Started"-Page
Concerning Use Case 1 (selection of Preferences) the "Get Started"-Page offers a User Interface to determine some basic information

--- a/src/components/app-header/app-header.template.html
+++ b/src/components/app-header/app-header.template.html
@@ -62,7 +62,7 @@
                    <span class="fa fa-4x fa-html5"></span>
                </div>
                <div class="info">
-                   <h4 class="text-center">Individual Experiences</h4>
+                   <h4 class="text-center">Minimum Effort</h4>
                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti atque, tenetur quam aspernatur corporis at explicabo nulla dolore necessitatibus doloremque exercitationem sequi dolorem architecto perferendis quas aperiam debitis dolor soluta!</p>
                    <!-- <a href="" class="btn">Link</a> -->
                </div>
@@ -75,7 +75,7 @@
                    <span class="fa fa-4x fa-css3"></span>
                </div>
                <div class="info">
-                   <h4 class="text-center">Efficient Scheduling</h4>
+                   <h4 class="text-center">Great Boni</h4>
                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti atque, tenetur quam aspernatur corporis at explicabo nulla dolore necessitatibus doloremque exercitationem sequi dolorem architecto perferendis quas aperiam debitis dolor soluta!</p>
                    <!-- <a href="" class="btn">Link</a> -->
                </div>
