--- a/src/components/app-header/app-header.template.html
+++ b/src/components/app-header/app-header.template.html
@@ -33,7 +33,7 @@
                 </div>
                 <div class="info">
                     <h4 class="text-center">Individual Experiences</h4>
-                    <p> Plan your holiday adjust Your holiday to Your individual preferences and expectations</p>
+                    <p>Plan your holiday adjust Your holiday to Your individual preferences and expectations</p>
                     <!-- <a href="" class="btn">Link</a> -->
                 </div>
             </div>
@@ -46,7 +46,7 @@
                 </div>
                 <div class="info">
                     <h4 class="text-center">Efficient Scheduling</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti atque, tenetur quam aspernatur corporis at explicabo nulla dolore necessitatibus doloremque exercitationem sequi dolorem architecto perferendis quas aperiam debitis dolor soluta!</p>
+                    <p>A generated schedule based on your personal preferences will maximize the experience of your holdiay and yield an optimal timetable according to your interests</p>
                     <!-- <a href="" class="btn">Link</a> -->
                 </div>
             </div>
@@ -63,7 +63,7 @@
                </div>
                <div class="info">
                    <h4 class="text-center">Feedback</h4>
-                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti atque, tenetur quam aspernatur corporis at explicabo nulla dolore necessitatibus doloremque exercitationem sequi dolorem architecto perferendis quas aperiam debitis dolor soluta!</p>
+                   <p>A broad database fed and fostered by users who share there experiences and evaluate offers from the sight of a fellow traveler</p>
                    <!-- <a href="" class="btn">Link</a> -->
                </div>
            </div>
@@ -76,7 +76,7 @@
                </div>
                <div class="info">
                    <h4 class="text-center">Advantages</h4>
-                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti atque, tenetur quam aspernatur corporis at explicabo nulla dolore necessitatibus doloremque exercitationem sequi dolorem architecto perferendis quas aperiam debitis dolor soluta!</p>
+                   <p>Enjoy great boni by subscribing to the premium model of the service in order to unlock the perfect travelling experience</p>
                    <!-- <a href="" class="btn">Link</a> -->
                </div>
            </div>
