--- a/src/components/app-header/app-header.template.html
+++ b/src/components/app-header/app-header.template.html
@@ -1,13 +1,3 @@
-
-<nav class="navbar navbar-default">
-  <div class="container-fluid">
-   <ul class="nav navbar-nav navbar-right">
-      <li><a href="#">Partners <span class="bar">|</span></a></li>
-      <li><a href="#">About <span class="bar">|</span></a></li>
-      <li><a href="#">Login<span class="bar"></span></a></li>
-    </ul>
- </div>
-</nav>
 <header class="jumbotron">
    <div class="inner cover">
       <h1 class="cover-heading">Plan Your Holiday</h1>
@@ -19,7 +9,7 @@
 
         </p> -->
 
-        <p class="lead"><a class="btn btn-lg btn-info" href="#">Get Started</a></p>
+        <p class="lead"><a class="btn btn-lg btn-info" href="/getstarted">Get Started</a></p>
       </div>
  </header>
 
