Working on the Router
Trying to comprehend and rework the router

--- a/src/components/app-header/app-header.template.html
+++ b/src/components/app-header/app-header.template.html
@@ -9,7 +9,7 @@
 
         </p> -->
 
-        <p class="lead"><a class="btn btn-lg btn-info" href="/getstarted">Get Started</a></p>
+        <p class="lead"><a class="btn btn-lg btn-info" ui-sref="getstarted">Get Started</a></p>
       </div>
  </header>
 
