--- a/src/components/app-header/app-header.template.html
+++ b/src/components/app-header/app-header.template.html
@@ -1,76 +1,9 @@
-<header class="jumbotron">
-   <div class="inner cover">
-      <h1 class="cover-heading">Plan Your Holiday</h1>
-
-        <p class="lead">Plan Your Holiday is the best Single-Page Web Application in the World.
-
-        <!-- <small>    <br> <a href="http://bootsnipp.com/iframe/g6GWQ" target=
-              "_blank">Best viewed on full screen</a></small> */
-
-        </p> -->
-
-        <p class="lead"><a class="btn btn-lg btn-info" href="/getstarted">Get Started</a></p>
-      </div>
- </header>
-
-<div class="container">
- <div class="container">
-    <div class="row">
-        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-            <div class="box">
-                <div class="box-icon">
-                    <span class="fa fa-5x fa-heart"></span>
-                </div>
-                <div class="info">
-                    <h4 class="text-center">Individual Experiences</h4>
-                    <p>Plan your holiday adjust Your holiday to Your individual preferences and expectations</p>
-                    <!-- <a href="" class="btn">Link</a> -->
-                </div>
-            </div>
-        </div>
-
-        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-            <div class="box">
-                <div class="box-icon">
-                    <span class="fa fa-5x fa-calendar" aria-hidden="true" ></span>
-                </div>
-                <div class="info">
-                    <h4 class="text-center">Efficient Scheduling</h4>
-                    <p>A generated schedule based on your personal preferences will maximize the experience of your holdiay and yield an optimal timetable according to your interests</p>
-                    <!-- <a href="" class="btn">Link</a> -->
-                </div>
-            </div>
-        </div>
-	</div>
-</div>
-
-<div class="container">
-   <div class="row">
-       <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-           <div class="box">
-               <div class="box-icon">
-                   <span class=" fa fa-5x fa-star" ></span>
-               </div>
-               <div class="info">
-                   <h4 class="text-center">Feedback</h4>
-                   <p>A broad database fed and fostered by users who share there experiences and evaluate offers from the sight of a fellow traveler</p>
-                   <!-- <a href="" class="btn">Link</a> -->
-               </div>
-           </div>
-       </div>
-
-       <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-           <div class="box">
-               <div class="box-icon">
-                   <span class="fa fa-5x fa-gift" ></span>
-               </div>
-               <div class="info">
-                   <h4 class="text-center">Advantages</h4>
-                   <p>Enjoy great boni by subscribing to the premium model of the service in order to unlock the perfect travelling experience</p>
-                   <!-- <a href="" class="btn">Link</a> -->
-               </div>
-           </div>
-       </div>
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+   <ul class="nav navbar-nav navbar-right">
+      <li><a href="#">Partners <span class="bar">|</span></a></li>
+      <li><a href="#">About <span class="bar">|</span></a></li>
+      <li><a href="#">Login<span class="bar"></span></a></li>
+    </ul>
  </div>
-</div>
-</div>
+</nav>
