--- a/src/components/app-header/app-header.template.html
+++ b/src/components/app-header/app-header.template.html
@@ -1,6 +1,7 @@
 <nav class="navbar navbar-default">
   <div class="container-fluid">
    <ul class="nav navbar-nav navbar-right">
+      <li><a ng-click="$ctrl.home()">Home <span class="bar">|</span></a></li>
       <li><a href="#">Partners <span class="bar">|</span></a></li>
       <li><a href="#">About <span class="bar">|</span></a></li>
       <li><a href="#">Login<span class="bar"></span></a></li>
