--- a/src/components/entry-page/entry-page.template.html
+++ b/src/components/entry-page/entry-page.template.html
@@ -13,7 +13,7 @@
       </div>
  </header>
 
-<div class="container">
+<div class="container" center>
  <div class="container">
     <div class="row">
         <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
