Added Pages of the Navbar
Implemented and linked the pages referenced in the navbar in order to enable orientation around the application

--- a/src/components/app-header/app-header.template.html
+++ b/src/components/app-header/app-header.template.html
@@ -2,9 +2,9 @@
   <div class="container-fluid">
    <ul class="nav navbar-nav navbar-right">
       <li><a ng-click="$ctrl.home()">Home <span class="bar">|</span></a></li>
-      <li><a href="#">Partners <span class="bar">|</span></a></li>
-      <li><a href="#">About <span class="bar">|</span></a></li>
-      <li><a href="#">Login<span class="bar"></span></a></li>
+      <li><a ng-click="$ctrl.partners()">Partners <span class="bar">|</span></a></li>
+      <li><a ng-click="$ctrl.about()">About <span class="bar">|</span></a></li>
+      <li><a ng-click="$ctrl.login()">Login <span class="bar"></span></a></li>
     </ul>
  </div>
 </nav>
