--- a/src/components/login-page/login-page.template.html
+++ b/src/components/login-page/login-page.template.html
@@ -10,7 +10,7 @@
 			<div class="cols-sm-10">
 				<div class="input-group">
 					<span class="input-group-addon"><i class="fa fa-users fa" aria-hidden="true"></i></span>
-					<input type="text" class="form-control" name="username" id="username"  placeholder="Enter your Username"/>
+					<input type="text" class="form-control" name="username" id="username" ng-model="$ctrl.login.username"  placeholder="Enter your Username"/>
 				</div>
 			</div>
 		</div>
@@ -20,13 +20,13 @@
 			<div class="cols-sm-10">
 				<div class="input-group">
 					<span class="input-group-addon"><i class="fa fa-lock fa-lg" aria-hidden="true"></i></span>
-					<input type="password" class="form-control" name="password" id="password"  placeholder="Enter your Password"/>
+					<input type="password" class="form-control" name="password" id="password" ng-model="$ctrl.login.password"  placeholder="Enter your Password"/>
 				</div>
 			</div>
 		</div>
 
 		<div class="form-group ">
-			<button type="button" class="btn btn-primary btn-lg btn-block login-button">Login</button>
+			<button type="button" class="btn btn-primary btn-lg btn-block login-button" ng-click="$ctrl.submit()">Login</button>
 		</div>
 		<div class="login-register">
 			<p> <small> Don't have an account yet? </small></p>
