--- a/src/components/entry-page/entry-page.style.css
+++ b/src/components/entry-page/entry-page.style.css
@@ -39,6 +39,11 @@ background-color: #030033;
     text-align: right;
     display: block;
     margin-top: 60px;
+    width:460px;
+    max-width:460px;
+    display: inline-block;
+    height: 220px;
+    max-height:220px;
 }
 .box-icon {
     background-color: rgb(0, 0, 255);
@@ -68,6 +73,7 @@ background-color: #030033;
     font-size: 16px;
     padding-top: 10px;
     text-align: justify;
+    text-shadow: none;
 }
 .info > a {
     background-color: #03a9f4;
@@ -83,7 +89,7 @@ background-color: #030033;
     transition: all 0.5s ease 0s;
 }
 body {
-  background: url("https://www.meditainment.com/images/dmImage/SourceImage/holiday-beach.jpg") no-repeat center center fixed;
+  background: url("/Users/duyguakdemir/desktop/tum/seba_project/plan-your-holiday-frontend/src/img/Prag.jpg") no-repeat center center fixed;
   /*-webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
