--- a/src/components/entry-page/entry-page.template.html
+++ b/src/components/entry-page/entry-page.template.html
@@ -22,8 +22,8 @@
                     <span class="fa fa-5x fa-heart"></span>
                 </div>
                 <div class="info">
-                    <h4 class="text-center">Individual Experiences</h4>
-                    <p>Plan your holiday adjust Your holiday to Your individual preferences and expectations</p>
+                    <h4 class="text-center" >Individual Experiences</h4>
+                    <p>Plan Your Holiday adjusts your vacation to your individual prefereces and expectations. By selecting preferences and determining categories. Plan Your Holiday will recommend attractions and activity to achieve this</p>
                     <!-- <a href="" class="btn">Link</a> -->
                 </div>
             </div>
