--- a/src/components/app-getstarted/app-getstarted.template.html
+++ b/src/components/app-getstarted/app-getstarted.template.html
@@ -76,7 +76,7 @@
 		</div>
 
 		<div class="form-group ">
-			<button type="button" class="btn btn-primary btn-lg btn-block login-button">Register</button>
+			<button type="button" class="btn btn-primary btn-lg btn-block login-button" ng-click="$ctrl.main()">Register</button>
 		</div>
 		<div class="login-register">
 			<p> <small> Already got an account? </small></p>
