--- a/src/components/login-page/login-page.template.html
+++ b/src/components/login-page/login-page.template.html
@@ -9,7 +9,7 @@
 			<label for="username" class="cols-sm-2 control-label">Username</label>
 			<div class="cols-sm-10">
 				<div class="input-group">
-					<span class="input-group-addon"><i class="fa fa-users fa" aria-hidden="true"></i></span>
+					<span class="input-group-addon"><i class="fa fa-user fa" aria-hidden="true"></i></span>
 					<input type="text" class="form-control" name="username" id="username" ng-model="$ctrl.login.username"  placeholder="Enter your Username"/>
 				</div>
 			</div>
@@ -26,7 +26,7 @@
 		</div>
 
 		<div class="form-group ">
-			<button type="button" class="btn btn-primary btn-lg btn-block login-button" ng-click="$ctrl.submit()">Login</button>
+			<button type="button" class="btn btn-primary btn-lg btn-block login-button" ng-click="$ctrl.submit(); $ctrl.main()">Login</button>
 		</div>
 		<div class="login-register">
 			<p> <small> Don't have an account yet? </small></p>
