--- a/src/components/entry-page/entry-page.template.html
+++ b/src/components/entry-page/entry-page.template.html
@@ -22,8 +22,8 @@
                     <span class="fa fa-5x fa-heart"></span>
                 </div>
                 <div class="info">
-                    <h4 class="text-center">Individual Experiences</h4>
-                    <p>Plan your holiday adjust Your holiday to Your individual preferences and expectations</p>
+                    <h4 class="text-center" >Individual Experiences</h4>
+                    <p><strong>Plan Your Holiday adjusts your vacation to your individual prefereces and expectations. By selecting preferences and determining categories. Plan Your Holiday will recommend attractions and activity to achieve this.</strong></p>
                     <!-- <a href="" class="btn">Link</a> -->
                 </div>
             </div>
@@ -36,7 +36,7 @@
                 </div>
                 <div class="info">
                     <h4 class="text-center">Efficient Scheduling</h4>
-                    <p>A generated schedule based on your personal preferences will maximize the experience of your holdiay and yield an optimal timetable according to your interests</p>
+                    <p><strong>The planning of a schedule for an entire holiday is associated with a lot of stress and effort. Plan Your Holiday will undertake the task for you. A generated schedule based on your personal preferences will maximize the experience of your holdiay and yield an optimal timetable according to your interests.</strong></p>
                     <!-- <a href="" class="btn">Link</a> -->
                 </div>
             </div>
@@ -53,7 +53,7 @@
                </div>
                <div class="info">
                    <h4 class="text-center">Feedback</h4>
-                   <p>A broad database fed and fostered by users who share there experiences and evaluate offers from the sight of a fellow traveler</p>
+                   <p><strong>A broad database fed and fostered by users who share there experiences and evaluate offers from the sight of a fellow traveler.</strong></p>
                    <!-- <a href="" class="btn">Link</a> -->
                </div>
            </div>
@@ -66,7 +66,7 @@
                </div>
                <div class="info">
                    <h4 class="text-center">Advantages</h4>
-                   <p>Enjoy great boni by subscribing to the premium model of the service in order to unlock the perfect travelling experience</p>
+                   <p><strong>Enjoy great boni by subscribing to the premium model of the service in order to unlock the perfect travelling experience like discount offers and skipping the line instead of waiting in front of an attraction.</strong></p>
                    <!-- <a href="" class="btn">Link</a> -->
                </div>
            </div>
