--- a/src/components/entry-page/entry-page.template.html
+++ b/src/components/entry-page/entry-page.template.html
@@ -2,7 +2,7 @@
    <div class="inner cover">
       <h1 class="cover-heading">Plan Your Holiday</h1>
 
-        <p class="lead">Plan Your Holiday is the best Single-Page Web Application in the World.
+        <p class="lead">Plan your vacation in an efficient way and experience the perfecr holiday tailored to your preferences.
 
         <!-- <small>    <br> <a href="http://bootsnipp.com/iframe/g6GWQ" target=
               "_blank">Best viewed on full screen</a></small> */
