--- a/src/components/app-header/app-header.template.html
+++ b/src/components/app-header/app-header.template.html
@@ -1,10 +1,10 @@
 <nav class="navbar navbar-default">
   <div class="container-fluid">
    <ul class="nav navbar-nav navbar-right">
-      <li><a ng-click="$ctrl.home()">Home <span class="bar">|</span></a></li>
-      <li><a ng-click="$ctrl.partners()">Partners <span class="bar">|</span></a></li>
-      <li><a ng-click="$ctrl.about()">About <span class="bar">|</span></a></li>
-      <li><a ng-click="$ctrl.login()">Login <span class="bar"></span></a></li>
+      <li><a ng-click="$ctrl.home()">Home</a></li>
+      <li><a ng-click="$ctrl.partners()">Partners</a></li>
+      <li><a ng-click="$ctrl.about()">About</a></li>
+      <li><a ng-click="$ctrl.login()">Login</a></li>
     </ul>
  </div>
 </nav>
