--- a/src/components/app-header/app-header.style.css
+++ b/src/components/app-header/app-header.style.css
@@ -1,14 +1,15 @@
-.bar {
-  font-size: 20px;
-  color: rgb(200, 200, 200);
-}
-
-.navbar-default
-{
+.navbar-default {
    background-color: rgb(0, 50, 100);
    border-color: rgb(0, 50, 100);
    color: rgb(0, 50, 100);
+   margin-bottom: 0;
 }
+
+.navbar-default .navbar-nav > li > a {
+  font-size: 17px;
+  color: rgb(200, 200, 200);
+}
+
 /* Changes cursor once an element of the navbar has been focused or hovered above‚ */
 .navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus {
   cursor: pointer;
