--- a/src/components/entry-page/entry-page.style.css
+++ b/src/components/entry-page/entry-page.style.css
@@ -1,4 +1,5 @@
 .jumbotron {
+  text-align: center;
     margin-bottom: 0px;
     background-position: 0% 25%;/
     background-size: cover;
@@ -20,7 +21,7 @@
     margin-top: 60px;
 }
 .box-icon {
-    background-color: rgb(0, 0, 255);
+    background-color: rgb(0, 50, 100);
     border-radius: 50%;
     display: table;
     height: 100px;
@@ -34,10 +35,10 @@
     display: table-cell;
     text-align: center;
     vertical-align: middle;
-
-
 }
+
 .info h4 {
+    color: rgb(0, 50, 100);
     font-size: 26px;
     letter-spacing: 2px;
     text-transform: uppercase;
@@ -61,28 +62,14 @@
     color: #fff;
     transition: all 0.5s ease 0s;
 }
-body {
-  /*-webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;*/
+
+.full-background-image {
+  background-image: url("https://www.meditainment.com/images/dmImage/SourceImage/holiday-beach.jpg");
+
   min-height: 100%;
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: center;
   background-size: cover;
-
-  height: 100%;
-  color: #fff;
-  text-align: center;
-  text-shadow: 0 1px 3px rgba(0,0,0,.5);
-}
-.glyphicon {
-    font-size: 60px;
-    position: inherit;
-    vertical-align: middle;
-    text-align: center;
-    margin-top: 120%;
-    display: inline-block;
 
 }
