apply background image to div, instead of body

--- a/src/components/about-page/about-page.template.html
+++ b/src/components/about-page/about-page.template.html
@@ -1,9 +1,11 @@
-<header class="jumbotron">
-   <div class="inner cover">
-      <h1 class="cover-heading">About</h1>
-      <p class="lead">
-        <b>Plan Your Holiday</b> is a software project for the Course <i>Software Engineering für betriebliche Anwendungen – Masterkurs: Web Application Engineering (IN2087)</i> developed by team 59.
-        Goal of the project is to design and implement a Singl-Page Web Application utilizing the MEAN-Stack.
-      </p>
-    </div>
- </header>
+<div class="full-background-image">
+  <header class="jumbotron">
+     <div class="inner cover">
+        <h1 class="cover-heading">About</h1>
+        <p class="lead">
+          <b>Plan Your Holiday</b> is a software project for the Course <i>Software Engineering für betriebliche Anwendungen – Masterkurs: Web Application Engineering (IN2087)</i> developed by team 59.
+          Goal of the project is to design and implement a Singl-Page Web Application utilizing the MEAN-Stack.
+        </p>
+      </div>
+   </header>
+</div>
