--- a/src/components/app-getstarted/app-getstarted.style.css
+++ b/src/components/app-getstarted/app-getstarted.style.css
@@ -1,42 +1,8 @@
-body, html{
-  min-height: 120%;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-position: center;
-  background-size: cover;
 
-  height: 120%;
-  color: #fff;
+.form-group {
+	margin-bottom: 20px;
+  color: white;
   text-align: center;
-  text-shadow: 0 1px 3px rgba(0,0,0,.5);
-}
-
-.jumbotron {
-    text-shadow: black 0.3em 0.3em 0.3em;
-    background: rgba(100, 100, 100, 0.3);
-}
-
-.main{
- 	margin-top: 70px;
-}
-
-h1.title {
-	font-size: 50px;
-	font-family: 'Passion One', cursive;
-	font-weight: 400;
-}
-
-hr{
-	width: 10%;
-	color: #fff;
-}
-
-.form-group{
-	margin-bottom: 15px;
-}
-
-label{
-	margin-bottom: 15px;
 }
 
 input,
@@ -52,19 +18,18 @@ input::-webkit-input-placeholder {
     -moz-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
     -webkit-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
     box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
-    background: rgba(100, 100, 100, 0.3);
+    background: rgba(100, 100, 100, 0.2);
 
 }
 
 .main-center{
- 	margin-top: 30px;
  	margin: 0 auto;
- 	max-width: 330px;
-    padding: 40px 40px;
-
+  border-top: 40px;
+ 	max-width: 500px;
+    padding: 5px 5% 0 5%;
 }
 
-.login-button{
+.login-button {
 	margin-top: 5px;
 }
 
