--- a/src/components/entry-page/entry-page.template.html
+++ b/src/components/entry-page/entry-page.template.html
@@ -1,76 +1,78 @@
-<header class="jumbotron">
-   <div class="inner cover">
-      <h1 class="cover-heading">Plan Your Holiday</h1>
+<div class="full-background-image">
+  <header class="jumbotron">
+     <div class="inner cover">
+        <h1 class="cover-heading">Plan Your Holiday</h1>
 
-        <p class="lead">Plan your vacation in an efficient way and experience the perfecr holiday tailored to your preferences.
+          <p class="lead">Plan Your Holiday is the best Single-Page Web Application in the World.
 
-        <!-- <small>    <br> <a href="http://bootsnipp.com/iframe/g6GWQ" target=
-              "_blank">Best viewed on full screen</a></small> */
+          <!-- <small>    <br> <a href="http://bootsnipp.com/iframe/g6GWQ" target=
+                "_blank">Best viewed on full screen</a></small> */
 
-        </p> -->
+          </p> -->
 
-        <p class="lead btn btn-lg btn-info" ng-click="$ctrl.getStarted()">Get Started</p>
-      </div>
- </header>
-
-<div class="container" center>
- <div class="container">
-    <div class="row">
-        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-            <div class="box">
-                <div class="box-icon">
-                    <span class="fa fa-5x fa-heart"></span>
-                </div>
-                <div class="info">
-                    <h4 class="text-center" >Individual Experiences</h4>
-                    <p><strong>Plan Your Holiday adjusts your vacation to your individual prefereces and expectations. By selecting preferences and determining categories. Plan Your Holiday will recommend attractions and activity to achieve this.</strong></p>
-                    <!-- <a href="" class="btn">Link</a> -->
-                </div>
-            </div>
+          <p class="lead btn btn-lg btn-info" ng-click="$ctrl.getStarted()">Get Started</p>
         </div>
+   </header>
 
-        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-            <div class="box">
-                <div class="box-icon">
-                    <span class="fa fa-5x fa-calendar" aria-hidden="true" ></span>
-                </div>
-                <div class="info">
-                    <h4 class="text-center">Efficient Scheduling</h4>
-                    <p><strong>The planning of a schedule for an entire holiday is associated with a lot of stress and effort. Plan Your Holiday will undertake the task for you. A generated schedule based on your personal preferences will maximize the experience of your holdiay and yield an optimal timetable according to your interests.</strong></p>
-                    <!-- <a href="" class="btn">Link</a> -->
-                </div>
-            </div>
-        </div>
-	</div>
-</div>
+  <div class="container">
+   <div class="container">
+      <div class="row">
+          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+              <div class="box">
+                  <div class="box-icon">
+                      <span class="fa fa-5x fa-heart"></span>
+                  </div>
+                  <div class="info">
+                      <h4 class="text-center">Individual Experiences</h4>
+                      <p>Plan your holiday adjust Your holiday to Your individual preferences and expectations</p>
+                      <!-- <a href="" class="btn">Link</a> -->
+                  </div>
+              </div>
+          </div>
 
-<div class="container">
-   <div class="row">
-       <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-           <div class="box">
-               <div class="box-icon">
-                   <span class=" fa fa-5x fa-star" ></span>
-               </div>
-               <div class="info">
-                   <h4 class="text-center">Feedback</h4>
-                   <p><strong>A broad database fed and fostered by users who share there experiences and evaluate offers from the sight of a fellow traveler.</strong></p>
-                   <!-- <a href="" class="btn">Link</a> -->
-               </div>
-           </div>
-       </div>
+          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+              <div class="box">
+                  <div class="box-icon">
+                      <span class="fa fa-5x fa-calendar" aria-hidden="true" ></span>
+                  </div>
+                  <div class="info">
+                      <h4 class="text-center">Efficient Scheduling</h4>
+                      <p>A generated schedule based on your personal preferences will maximize the experience of your holdiay and yield an optimal timetable according to your interests</p>
+                      <!-- <a href="" class="btn">Link</a> -->
+                  </div>
+              </div>
+          </div>
+  	</div>
+  </div>
 
-       <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-           <div class="box">
-               <div class="box-icon">
-                   <span class="fa fa-5x fa-gift" ></span>
-               </div>
-               <div class="info">
-                   <h4 class="text-center">Advantages</h4>
-                   <p><strong>Enjoy great boni by subscribing to the premium model of the service in order to unlock the perfect travelling experience like discount offers and skipping the line instead of waiting in front of an attraction.</strong></p>
-                   <!-- <a href="" class="btn">Link</a> -->
-               </div>
-           </div>
-       </div>
- </div>
-</div>
+  <div class="container">
+     <div class="row">
+         <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+             <div class="box">
+                 <div class="box-icon">
+                     <span class=" fa fa-5x fa-star" ></span>
+                 </div>
+                 <div class="info">
+                     <h4 class="text-center">Feedback</h4>
+                     <p>A broad database fed and fostered by users who share there experiences and evaluate offers from the sight of a fellow traveler</p>
+                     <!-- <a href="" class="btn">Link</a> -->
+                 </div>
+             </div>
+         </div>
+
+         <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+             <div class="box">
+                 <div class="box-icon">
+                     <span class="fa fa-5x fa-gift" ></span>
+                 </div>
+                 <div class="info">
+                     <h4 class="text-center">Advantages</h4>
+                     <p>Enjoy great boni by subscribing to the premium model of the service in order to unlock the perfect travelling experience</p>
+                     <!-- <a href="" class="btn">Link</a> -->
+                 </div>
+             </div>
+         </div>
+   </div>
+  </div>
+  </div>
 </div>
