--- a/src/components/login-page/login-page.template.html
+++ b/src/components/login-page/login-page.template.html
@@ -1,36 +1,38 @@
-<div class="main-login main-center">
-	<form class="form-horizontal" method="post" action="#">
+<div class="full-background-image">
+	<div class="main-login main-center">
+		<form method="post" action="#">
 
-    <div class="form-group">
-      <label class="cols-sm-2 control-label">Enter your Account details</label>
-    </div>
+	    <div class="form-group">
+	      <h3 class="cols-sm-2 control-label">Enter your Account details</h3>
+	    </div>
 
-		<div class="form-group">
-			<label for="username" class="cols-sm-2 control-label">Username</label>
-			<div class="cols-sm-10">
-				<div class="input-group">
-					<span class="input-group-addon"><i class="fa fa-user fa" aria-hidden="true"></i></span>
-					<input type="text" class="form-control" name="username" id="username" ng-model="$ctrl.login.username"  placeholder="Enter your Username"/>
+			<div class="form-group">
+				<label for="username" class="cols-sm-2 control-label">Username</label>
+				<div class="cols-sm-10">
+					<div class="input-group">
+						<span class="input-group-addon"><i class="fa fa-user fa" aria-hidden="true"></i></span>
+						<input type="text" class="form-control" name="username" id="username" ng-model="$ctrl.login.username"  placeholder="Enter your Username"/>
+					</div>
 				</div>
 			</div>
-		</div>
 
-		<div class="form-group">
-			<label for="password" class="cols-sm-2 control-label">Password</label>
-			<div class="cols-sm-10">
-				<div class="input-group">
-					<span class="input-group-addon"><i class="fa fa-lock fa-lg" aria-hidden="true"></i></span>
-					<input type="password" class="form-control" name="password" id="password" ng-model="$ctrl.login.password"  placeholder="Enter your Password"/>
+			<div class="form-group">
+				<label for="password" class="cols-sm-2 control-label">Password</label>
+				<div class="cols-sm-10">
+					<div class="input-group">
+						<span class="input-group-addon"><i class="fa fa-lock fa-lg" aria-hidden="true"></i></span>
+						<input type="password" class="form-control" name="password" id="password" ng-model="$ctrl.login.password"  placeholder="Enter your Password"/>
+					</div>
 				</div>
 			</div>
-		</div>
 
-		<div class="form-group ">
-			<button type="button" class="btn btn-primary btn-lg btn-block login-button" ng-click="$ctrl.submit(); $ctrl.main()">Login</button>
-		</div>
-		<div class="login-register">
-			<p> <small> Don't have an account yet? </small></p>
-      <a ng-click="$ctrl.getStarted()">Register</a>
-    </div>
-	</form>
+			<div class="form-group ">
+				<button type="button" class="btn btn-primary btn-lg btn-block login-button" ng-click="$ctrl.submit(); $ctrl.main()">Login</button>
+			</div>
+			<div class="login-register">
+				<p> <small> Don't have an account yet? </small></p>
+	      <a ng-click="$ctrl.getStarted()">Register</a>
+	    </div>
+		</form>
+	</div>
 </div>
