--- a/src/components/entry-page/entry-page.template.html
+++ b/src/components/entry-page/entry-page.template.html
@@ -1,24 +1,57 @@
-<div class="full-background-image">
-  <header class="jumbotron">
-     <div class="inner cover">
-        <h1 class="cover-heading">Plan Your Holiday</h1>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="icon" href="../../favicon.ico">
 
-          <p class="lead">Plan Your Holiday is the best Single-Page Web Application in the World.
+    <title>Jumbotron Template for Bootstrap</title>
 
-          <!-- <small>    <br> <a href="http://bootsnipp.com/iframe/g6GWQ" target=
-                "_blank">Best viewed on full screen</a></small> */
+    <!-- Bootstrap core CSS -->
+    <link href="../../dist/css/bootstrap.min.css" rel="stylesheet">
 
-          </p> -->
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <link href="../../assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
 
-          <p class="lead btn btn-lg btn-info" ng-click="$ctrl.getStarted()">Get Started</p>
-        </div>
-   </header>
+    <!-- Custom styles for this template -->
+    <link href="jumbotron.css" rel="stylesheet">
 
-  <div class="container">
-   <div class="container">
-      <div class="row">
-          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-              <div class="box">
+    <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
+    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
+    <script src="../../assets/js/ie-emulation-modes-warning.js"></script>
+
+
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+  </head>
+
+  <body>
+
+
+    <!-- Main jumbotron for a primary marketing message or call to action -->
+    <div class="full-background-image">
+    <div class="jumbotron">
+      <div class="container">
+        <h1>Plan Your Holiday!</h1>
+        <p>Plan Your Holiday is the best Single-Page Web Application in the World.</p>
+
+      </div>
+    </div>
+
+
+<div class="container">
+<div class="row">
+  <div class="col-sm-12">
+    <div class="row">
+      <div class="col-md-3">
+        <div class="box">
                   <div class="box-icon">
                       <span class="fa fa-5x fa-heart"></span>
                   </div>
@@ -28,10 +61,9 @@
                       <!-- <a href="" class="btn">Link</a> -->
                   </div>
               </div>
-          </div>
-
-          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-              <div class="box">
+      </div>
+      <div class="col-md-3">
+        <div class="box">
                   <div class="box-icon">
                       <span class="fa fa-5x fa-calendar" aria-hidden="true" ></span>
                   </div>
@@ -41,14 +73,9 @@
                       <!-- <a href="" class="btn">Link</a> -->
                   </div>
               </div>
-          </div>
-  	</div>
-  </div>
-
-  <div class="container">
-     <div class="row">
-         <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-             <div class="box">
+      </div>
+      <div class="col-md-3">
+        <div class="box">
                  <div class="box-icon">
                      <span class=" fa fa-5x fa-star" ></span>
                  </div>
@@ -58,10 +85,9 @@
                      <!-- <a href="" class="btn">Link</a> -->
                  </div>
              </div>
-         </div>
-
-         <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-             <div class="box">
+      </div>
+      <div class="col-md-3">
+        <div class="box">
                  <div class="box-icon">
                      <span class="fa fa-5x fa-gift" ></span>
                  </div>
@@ -71,8 +97,99 @@
                      <!-- <a href="" class="btn">Link</a> -->
                  </div>
              </div>
-         </div>
-   </div>
-  </div>
-  </div>
+
+      </div>
+    </div>
+    <br>
+    <br>
+      <div class="row">
+        <div class="col-sm-12">
+          <div class="row">
+            <div class="col-md-3 ">
+          <div class="main-login main-center">
+        <form method="post" action="#">
+
+          <div class="form-group">
+            <h3 class="cols-sm-2 control-label">Enter your Account details</h3>
+          </div>
+
+          <div class="form-group">
+            <label for="username" class="cols-sm-2 control-label">Username</label>
+            <div class="cols-sm-10">
+              <div class="input-group">
+                <span class="input-group-addon"><i class="fa fa-user fa" aria-hidden="true"></i></span>
+                <input type="text" class="form-control" name="username" id="username" ng-model="$ctrl.login.username"  placeholder="Enter your Username"/>
+              </div>
+            </div>
+          </div>
+
+          <div class="form-group">
+            <label for="password" class="cols-sm-2 control-label">Password</label>
+            <div class="cols-sm-10">
+              <div class="input-group">
+                <span class="input-group-addon"><i class="fa fa-lock fa-lg" aria-hidden="true"></i></span>
+                <input type="password" class="form-control" name="password" id="password" ng-model="$ctrl.login.password"  placeholder="Enter your Password"/>
+              </div>
+            </div>
+          </div>
+
+          <div class="form-group ">
+            <button type="button" class="btn btn-primary btn-lg btn-block login-button" ng-click="$ctrl.submit(); $ctrl.main()">Login</button>
+          </div>
+          <div class="login-register">
+            <p> <small> Don't have an account yet? </small></p>
+            <a ng-click="$ctrl.getStarted()">Register</a>
+          </div>
+        </form>
+
+      </div>
+
+    </div><!--/row-->
+
+    <div class="col-xs-6">
+      <div class="form-group">
+                      <p class="lead">Register now for <span class="text-success">FREE</span></p>
+                      <ul class="list-unstyled" style="line-height: 2">
+                          <li><span class="fa fa-check text-success"></span> See all your orders</li>
+                          <li><span class="fa fa-check text-success"></span> Shipping is always free</li>
+                          <li><span class="fa fa-check text-success"></span> Save your favorites</li>
+                          <li><span class="fa fa-check text-success"></span> Fast checkout</li>
+                          <li><span class="fa fa-check text-success"></span> Get a gift <small>(only new customers)</small></li>
+                          <li><span class="fa fa-check text-success"></span>Holiday discounts up to 30% off</li>
+                      </ul>
+                      <p><a href="./Register.jsp" class="btn btn-info btn-block">Yes please, register now!</a></p>
+                  </div>
+                  </div>
+  </div><!--/col-12-->
+</div><!--/row-->
 </div>
+<br>
+<br>
+<br>
+<br>
+
+
+
+
+
+    </div> <!-- /container -->
+
+
+    <nav class="navbar navbar-default navbar-fixed-bottom">
+      <div class="container">
+        <footer>
+          <p>&copy; 2016 Company, Inc.</p>
+        </footer>
+      </div>
+    </nav>
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
+    <script src="../../dist/js/bootstrap.min.js"></script>
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
+  </body>
+  </div>
+</html>
