--- a/src/components/partners/partners.template.html
+++ b/src/components/partners/partners.template.html
@@ -10,7 +10,7 @@
    <div class="container">
       <div class="row">
           <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-              <div class="box">
+              <div class="box2">
                   <div class="box-icon">
                       <span class="fa fa-5x fa-user"></span>
                   </div>
@@ -22,7 +22,7 @@
           </div>
 
           <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-              <div class="box">
+              <div class="box2">
                   <div class="box-icon">
                       <span class="fa fa-5x fa-user" aria-hidden="true" ></span>
                   </div>
@@ -38,7 +38,7 @@
   <div class="container">
      <div class="row">
          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-             <div class="box">
+             <div class="box2">
                  <div class="box-icon">
                      <span class=" fa fa-5x fa-user" ></span>
                  </div>
@@ -51,7 +51,7 @@
          </div>
 
          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-             <div class="box">
+             <div class="box2">
                  <div class="box-icon">
                      <span class="fa fa-5x fa-user" ></span>
                  </div>
