Instantiated Work on the Category Selection Screen
The page is accessible by the shortcut "DEV categories" in the navbar

--- a/src/components/main/main.template.html
+++ b/src/components/main/main.template.html
@@ -14,7 +14,7 @@
       <input type="text" class="form-control" name="destination" id="destination" placeholder="Enter your Destination"/>
     </div>
     <div class="form-group ">
-			<button type="button" class="btn btn-primary btn-lg btn-block login-button">Generate the optimal schedule!</button>
+			<button type="button" class="btn btn-primary btn-lg btn-block login-button" ng-click="$ctrl.selectCategories()">Generate the optimal schedule!</button>
 		</div>
    </div>
  </div>
