--- a/src/components/enter-journey/enter-journey.template.html
+++ b/src/components/enter-journey/enter-journey.template.html
@@ -1,15 +1,15 @@
 <div class="container">
-  <form name="form" ng-submit="login()" role="form">
+  <form name="form" ng-submit="$ctrl.submit()" role="form">
     <h2>Start planning</h2>
       <div class="form-group">
           <label for="destination">Destination</label>
           <i class="fa fa-plane"></i>
-          <input type="text" name="username" id="username" class="form-control" ng-model="username" required />
-          <span ng-show="form.username.$dirty && form.username.$error.required" class="help-block">Destination is required</span>
+          <input type="text" name="destination" id="destination" class="form-control" ng-model="$ctrl.journey.destination" required />
+          <span ng-show="form.destination.$dirty && form.destination.$error.required" class="help-block">Destination is required</span>
       </div>
       <div class="datetimepicker-box">
-        <datetimepicker data-ng-model="data.date"> </datetimepicker>
-        <datetimepicker data-ng-model="data.date"> </datetimepicker>
+        <datetimepicker data-ng-model="$ctrl.journey.arrival" data-datetimepicker-config="{minView:'hour'}"> </datetimepicker>
+        <datetimepicker data-ng-model="$ctrl.journey.departure" data-datetimepicker-config="{minView:'hour'}"> </datetimepicker>
       </div>
       <div class="form-actions">
           <button type="submit" ng-disabled="form.$invalid || dataLoading" class="btn btn-success">Next</button>
