Integration of the AttractionService
Integration of the AttractionService which will be used for Server Communication

--- a/src/components/category-selection/category-selection.template.html
+++ b/src/components/category-selection/category-selection.template.html
@@ -14,12 +14,14 @@
   </head>
   <body>
     <div class="full-background-image">
+
       <header class="jumbotron">
          <div class="inner cover">
             <h1 class="cover-heading">What would you like to visit!</h1>
             <p>Select your Category Preferences for the upcoming trips</p>
-          </div>
-       </header>
+         </div>
+      </header>
+
        <body style="margin: 0; border: 0;">
 
          <table style="border: 0; width: 100%;">
@@ -31,47 +33,40 @@
                    <div class="info">
                      <h4 class="text-center">Monuments</h4>
                                <!-- <a href="" class="btn">Link</a> -->
-                  </div>
-               </div>
+                   </div>
+                 </div>
                </div>
                <div class="col-md-3">
                  <div class="box4">
-
-                           <div class="info">
-                             <h4 class="text-center">Museums</h4>
-                               <!-- <a href="" class="btn">Link</a> -->
-                           </div>
-                       </div>
+                   <div class="info">
+                     <h4 class="text-center">Museums</h4>
+                        <!-- <a href="" class="btn">Link</a> -->
+                   </div>
+                 </div>
                </div>
                <div class="col-md-3">
                  <div class="box5">
-
                    <div class="info">
                      <h4 class="text-center">Parks</h4>
-                      
-                       <input id="ex7" type="text" data-slider-min="0" data-slider-max="20" data-slider-step="1" data-slider-value="5" data-slider-enabled="false"/>
-                       <input id="ex7-enabled" type="checkbox"/> Enabled
-
-                              <!-- <a href="" class="btn">Link</a> -->
-                          </div>
-                      </div>
+                     <input id="ex7" type="text" data-slider-min="0" data-slider-max="20" data-slider-step="1" data-slider-value="5" data-slider-enabled="false"/>
+                     <input id="ex7-enabled" type="checkbox"/> Enabled
+                   </div>
+                 </div>
                </div>
                <div class="col-md-3">
                  <div class="box6">
-
                    <div class="info">
                      <h4 class="text-center">Churches</h4>
-                              <!-- <a href="" class="btn">Link</a> -->
-                          </div>
-                      </div>
-
+                   </div>
+                 </div>
                </div>
              </div>
            </div>
          </td>
          </tr>
          <tr>
-           <td style="width: 25%; background: #658C00;">Navigation
+           <td style="width: 25%; background: #658C00;">
+             Navigation
            </td>
 
            <td style="width: 75%; background: #FFA100;"> <div class="container" center>
@@ -81,20 +76,17 @@
          </tr>
         </table>
 
-
-       </body>  <!-- hier ist das Ende des Elements Wrapper -->
-
-
-       </div>
-
-
+      <!-- exemplary listing of the information from the backend
+        <a href="#" class="list-group-item" ng-repeat="attraction in $ctrl.attractions">
+            <p> {{attraction.title}} {{attraction.city}} </p>
+        </a>
+      -->
 
 
+    </body>  <!-- hier ist das Ende des Elements Wrapper -->
 
 
-
-
-
+    </div>
 
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
